# ash-shell

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PKGBUILD  README.md  main.c
include/: ash.h  builtins.h  executor.h  git.h  parser.h  vars.h
src/: aliases.c  ashrc.c  builtins.c  commands.c  config.c  executor.c  git.c  main.c  parser.c  prompt.c  vars.c
